2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): set the state of the game-related
	items earlier

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): set the accelerator paths for the
	GtkActions properly

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): fixed a typo

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_enabled_games_item),
	(ui_main_game_changed): update the visibility and GamePause and
	GameResume properly, as well as the sensitivity of GamePause and
	GameStop

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): added labels and stock icons to
	GNOME's main menu

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): added actions for GNOME's main menu

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): added the main menu to the
	GtkUIManager

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): don't create a GtkAccelGroup, use
	the one from the GtkUIManager

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (ui_main_finalize): save the action
	group within the UiMainPrivate structure (to be able to enable and
	disable actions)

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (stop_game),
	(new_network_server), (show_high_scores),
	(show_preferences_dialog): updated the other menu callback to be
	prepared for usage with GtkActions

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (new_2_player_game): prepared
	new_2_player_game for the usage with GtkActions

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (window_destroy_cb), (ui_main_new),
	(quit_program): prepared quit_program() for the usage with GtkActions;
	drop application_quit_cb() which was a wrapper - now the signatures