@@ -1,3 +1,8 @@
+2008-02-08  Sven Herzberg  <sven@imendio.com>
+
+	* src/ui/ui-main.c: (ui_main_new): added a "Game" action to work
+	around bug http://bugzilla.gnome.org/show_bug.cgi?id=515017
+
 2008-02-07  Sven Herzberg  <sven@imendio.com>
 
 	* src/ui/ui-main.c: (ui_main_new): set the state of the game-related
